creusot/tests/should_fail/prusti/logic/deref.stderr
error[creusot]: invalid dereference of expression with home `'0h` and lifetime `'a` at time-slice `'curr`
 --> deref.rs:6:6
  |
6 |     *x
  |      ^

error: aborting due to previous error

